--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mailjet_sender
-version: 0.1.2
+version: 0.2.0
 description: |
   Mailjet sender is a standalone dart library to send emails
     to.
@@ -7,15 +7,15 @@ homepage: https://github.com/jayjah/mailjet_sender
 repository: https://github.com/jayjah/mailjet_sender.git
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: '>=2.12.0'
   
 dependencies:
   # http queries
   # BSD-License
   # https://pub.dev/packages/http
-  http: ^0.12.2
+  http: ^0.13.0
 dev_dependencies:
-  test: ^1.0.0
+  test: ^1.16.5
   # analyzer rules
-  pedantic: ^1.9.2
+  pedantic: ^1.11.0
 
